# Hedro-Training

./: .gitignore  Makefile  README.md  docker-compose.yaml
device_simulator/: .env  package.json  tsconfig.json
device_simulator/src/: main.ts
device_simulator/src/infra/: humidity_random.ts  logger.ts  messaging.ts  temp_random.ts
device_simulator/src/services/: humidity.ts  interfaces.ts  temp.ts
grpc/: Cargo.toml  Dockerfile  build.rs
grpc/protos/: server.proto
grpc/src/: main.rs
grpc/src/infra/: aws_timestream.rs  mod.rs
grpc/src/service/: services.rs
rmq-bridge/: .env  Cargo.toml  Dockerfile
rmq-bridge/src/: main.rs
rmq-bridge/src/infra/: mod.rs  mqtt_messaging.rs  rmq_messaging.rs
rmq-bridge/src/services/: messages.rs  service.rs
rmq-consumer/: .env  Cargo.toml  Dockerfile
rmq-consumer-v2/: .env  Cargo.toml
rmq-consumer-v2/src/infra/: rmq_messenger.rs
rmq-consumer/src/: main.rs
rmq-consumer/src/infra/: aws_messenger.rs  aws_timestream.rs  mod.rs  rmq_messaging.rs  rmq_messenger.rs
rmq-consumer/src/services/: message.rs  mod.rs  service.rs
