[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-timestreamquery = "1.14.0"
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.0" }
log = { version = "0.4.20" }

[build-dependencies]
tonic-build = { version = "0.11.0" }
